@@ -9,7 +9,7 @@ import us.lsi.geometria.Punto2D;
 public class TestUniverso {
 
 	public static void main(String[] args) {
-		Locale.setDefault(new Locale("en", "US"));
+		Locale.setDefault(Locale.of("en", "US"));
 		Universo2D universo = Universo2D.empty("Universo", 1200, 600, Color.blue);
 		Estrella sol = Estrella.of("Sol", Punto2D.of(300., 200.), 20, universo);
 		Estrella polar = Estrella.of("Polar", Punto2D.of(1000., 400.), 20, universo);
